force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Make__c.field-meta.xml
<CustomField>
    <fullName>AVO_Make__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Make</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>AVO_Meter_Codeset__c.AVO_Type__c</field>
            <operation>equals</operation>
            <value>Meter Make</value>
        </filterItems>
        <filterItems>
            <field>AVO_Meter_Codeset__c.AVO_Status__c</field>
            <operation>equals</operation>
            <value>A</value>
        </filterItems>
        <infoMessage>Please select an active Meter Make.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>AVO_Meter_Codeset__c</referenceTo>
    <relationshipLabel>Meter Transactions</relationshipLabel>
    <relationshipName>Meter_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>