force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Assessment_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Assessment_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Assessment ID</label>
    <referenceTo>MUSW__Inspection__c</referenceTo>
    <relationshipLabel>Meter Transactions</relationshipLabel>
    <relationshipName>Meter_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>