force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Installation_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Installation_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Meter Installation ID</label>
    <referenceTo>AVO_Meter_Transaction__c</referenceTo>
    <relationshipLabel>Meter Transactions (Meter Installation ID)</relationshipLabel>
    <relationshipName>Meter_Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>