force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Inventory_Status__c</fullName>
    <formula>TEXT( AVO_Meter_Maintenance_ID__r.AVO_Meter_ID__r.AVO_Inventory_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meter Inventory Status</label>
    <type>Text</type>
</CustomField>