force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Last_Read_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Last_Read_Date__c</fullName>
    <label>Meter Last Read Date</label>
    <type>Date</type>
</CustomField>