force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Location_Other__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Location_Other__c</fullName>
    <label>Meter Location Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>