force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Missing_On_Site__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Missing_On_Site__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meter Missing On Site</label>
    <type>Checkbox</type>
</CustomField>