force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Mounting_Orientation__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Mounting_Orientation__c</fullName>
    <label>Meter Mounting Orientation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Diagonal Z</fullName>
            </value>
            <value>
                <fullName>Horizontal</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Vertical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>