force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_On_Site_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_On_Site_ID__c</fullName>
    <label>Meter On Site ID</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>