force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Read_Amount__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Read_Amount__c</fullName>
    <label>Meter Read Amount</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>