force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Reader__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Reader__c</fullName>
    <label>Meter Reader</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alexander McLean</fullName>
            </value>
            <value>
                <fullName>Antonio Fleming</fullName>
            </value>
            <value>
                <fullName>BAKER IRRIGATION INC</fullName>
            </value>
            <value>
                <fullName>Chase Cline</fullName>
            </value>
            <value>
                <fullName>Cristina Pounds</fullName>
            </value>
            <value>
                <fullName>Ethan Bundrick</fullName>
            </value>
            <value>
                <fullName>GFC</fullName>
            </value>
            <value>
                <fullName>Hannah Denton</fullName>
            </value>
            <value>
                <fullName>Heather Brown</fullName>
            </value>
            <value>
                <fullName>IRRIGATION PLUS</fullName>
            </value>
            <value>
                <fullName>Jacob Elliott</fullName>
            </value>
            <value>
                <fullName>Jesstin Chandler</fullName>
            </value>
            <value>
                <fullName>Justin Walls</fullName>
            </value>
            <value>
                <fullName>Lance Wyant</fullName>
            </value>
            <value>
                <fullName>Lee Wright</fullName>
            </value>
            <value>
                <fullName>Marjie Roquemore</fullName>
            </value>
            <value>
                <fullName>Matthew Barton</fullName>
            </value>
            <value>
                <fullName>Michael Martin</fullName>
            </value>
            <value>
                <fullName>OWNER</fullName>
            </value>
            <value>
                <fullName>Rebecca Rehee</fullName>
            </value>
            <value>
                <fullName>Shannon Parrish</fullName>
            </value>
            <value>
                <fullName>SHOEMAKER IRRIGATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>