force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Reading_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Reading_Type__c</fullName>
    <label>Meter Reading Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yearly Reading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>