force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Serial_Number_MSN__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Serial_Number_MSN__c</fullName>
    <label>Meter Serial Number (MSN)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>