force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Site_ID_MSID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Site_ID_MSID__c</fullName>
    <label>Meter Site ID (MSID)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>