force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Special_Condition__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Special_Condition__c</fullName>
    <label>Meter Special Condition</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ARPA</fullName>
            </value>
            <value>
                <fullName>Drought Conditions</fullName>
            </value>
            <value>
                <fullName>Monthly Meter Reading</fullName>
            </value>
            <value>
                <fullName>Volumetric Limit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>