force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Transaction_Type__c</fullName>
    <label>Meter Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Flow Meter Approval</fullName>
            </value>
            <value>
                <fullName>AG Water Metering Installation</fullName>
            </value>
            <value>
                <fullName>Meter Application</fullName>
            </value>
            <value>
                <fullName>Meter Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>