force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Meter_Update_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Meter_Update_Type__c</fullName>
    <label>Meter Update Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meter Location Change</fullName>
            </value>
            <value>
                <fullName>Meter Movement</fullName>
            </value>
            <value>
                <fullName>Enter Removal Date</fullName>
            </value>
            <value>
                <fullName>Undo Removal Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>