force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>AVO_Multiplier__c</fullName>
    <label>Multiplier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0.0001</fullName>
            </value>
            <value>
                <fullName>0.0010</fullName>
            </value>
            <value>
                <fullName>0.0100</fullName>
            </value>
            <value>
                <fullName>0.1000</fullName>
            </value>
            <value>
                <fullName>1,000.0000</fullName>
            </value>
            <value>
                <fullName>1.0000</fullName>
            </value>
            <value>
                <fullName>10,000.0000</fullName>
            </value>
            <value>
                <fullName>10.0000</fullName>
            </value>
            <value>
                <fullName>100.0000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>