force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Name_Of_Installer__c.field-meta.xml
<CustomField>
    <fullName>AVO_Name_Of_Installer__c</fullName>
    <label>Name Of Installer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>