force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_New_Meter_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_New_Meter_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Meter (MSN)</label>
    <referenceTo>AVO_Meter__c</referenceTo>
    <relationshipLabel>Meter Transactions (New Meter ID)</relationshipLabel>
    <relationshipName>Meter_Transactions2</relationshipName>
    <type>Lookup</type>
</CustomField>