force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Old_Meter_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Old_Meter_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Old Meter (MSN)</label>
    <referenceTo>AVO_Meter__c</referenceTo>
    <relationshipLabel>Meter Transactions (Old Meter ID)</relationshipLabel>
    <relationshipName>Meter_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>