force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Old_Meter_Reading__c.field-meta.xml
<CustomField>
    <fullName>AVO_Old_Meter_Reading__c</fullName>
    <label>Old Meter Reading</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>