force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Old_Meter_Retrieved__c.field-meta.xml
<CustomField>
    <fullName>AVO_Old_Meter_Retrieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Old Meter Retrieved</label>
    <type>Checkbox</type>
</CustomField>