force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Old_Meter_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Old_Meter_Serial_Number__c</fullName>
    <label>Old Meter Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>