force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Other_Crop_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Other_Crop_Type__c</fullName>
    <label>Other Crop Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>