force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Outside_Pipe_Diam_In__c.field-meta.xml
<CustomField>
    <fullName>AVO_Outside_Pipe_Diam_In__c</fullName>
    <label>Outside Pipe Diam (In)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>