force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Parent_Permit_ID__c.field-meta.xml
<CustomField>
    <fullName>AVO_Parent_Permit_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Permit ID</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Revision Meter Transactions</relationshipLabel>
    <relationshipName>Meter_Transactions1</relationshipName>
    <type>Lookup</type>
</CustomField>