force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Pipe_Length_Downstream_0_200__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pipe_Length_Downstream_0_200__c</fullName>
    <label>Pipe Length Downstream (0 - 200) Inches</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>