force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Pipe_Type_Other__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pipe_Type_Other__c</fullName>
    <label>Pipe Type Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>