force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Pipe_Up_UOM__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pipe_Up_UOM__c</fullName>
    <label>Pipe Up UOM</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Inch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>