force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Pump_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Pump_Number__c</fullName>
    <label>Pump Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>