force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Reading_Comment__c.field-meta.xml
<CustomField>
    <fullName>AVO_Reading_Comment__c</fullName>
    <label>Reading Comment</label>
    <type>TextArea</type>
</CustomField>