force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Reading_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Reading_Date__c</fullName>
    <label>Meter Reading Date</label>
    <type>Date</type>
</CustomField>