force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Reason_Not_To_Spec__c.field-meta.xml
<CustomField>
    <fullName>AVO_Reason_Not_To_Spec__c</fullName>
    <label>Reason Not To Spec</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>