force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>AVO_Removal_Reason__c</fullName>
    <label>Removal Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>