force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Replaced_Date__c.field-meta.xml
<CustomField>
    <fullName>AVO_Replaced_Date__c</fullName>
    <label>Replaced Date</label>
    <type>Date</type>
</CustomField>