force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Revision__c.field-meta.xml
<CustomField>
    <fullName>AVO_Revision__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Revision</label>
    <referenceTo>MUSW__Permit2__c</referenceTo>
    <relationshipLabel>Meter Transactions (Revision)</relationshipLabel>
    <relationshipName>Meter_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>