force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Site_Visit_Notes__c.field-meta.xml
<CustomField>
    <fullName>AVO_Site_Visit_Notes__c</fullName>
    <label>Site Visit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>