force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Site_Visit_Only__c.field-meta.xml
<CustomField>
    <fullName>AVO_Site_Visit_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Visit Only</label>
    <type>Checkbox</type>
</CustomField>