force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Source_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Source_Type__c</fullName>
    <label>Source Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pump - Surface Water</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Well - Groundwater</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>