force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Source_Well_Pad__c.field-meta.xml
<CustomField>
    <fullName>AVO_Source_Well_Pad__c</fullName>
    <label>Source Well Pad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>AVO_YesNo</valueSetName>
    </valueSet>
</CustomField>