force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Source_Withdrawal_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Source_Withdrawal_Type__c</fullName>
    <label>Source Withdrawal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Combination</fullName>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Hydraulic</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>