force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>AVO_Storage_Location__c</fullName>
    <label>Storage Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barn</fullName>
            </value>
            <value>
                <fullName>On Site</fullName>
            </value>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Warehouse Building</fullName>
            </value>
            <value>
                <fullName>Warehouse Container</fullName>
            </value>
            <value>
                <fullName>Warehouse Kitchen</fullName>
            </value>
            <value>
                <fullName>Warehouse Left-wall</fullName>
            </value>
            <value>
                <fullName>Warehouse Right-wall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>