force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Subject__c.field-meta.xml
<CustomField>
    <fullName>AVO_Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>