force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Submit_Disposal_Approval__c.field-meta.xml
<CustomField>
    <fullName>AVO_Submit_Disposal_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Disposal Approval</label>
    <type>Checkbox</type>
</CustomField>