force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_TableFrom__c.field-meta.xml
<CustomField>
    <fullName>AVO_TableFrom__c</fullName>
    <description>Identifies the source system table that the record came from</description>
    <label>AVO TableFrom</label>
    <length>255</length>
    <type>Text</type>
</CustomField>