force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Telemetry_Unit_Installed_By__c.field-meta.xml
<CustomField>
    <fullName>AVO_Telemetry_Unit_Installed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Telemetry Unit Installed By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meter Transactions (Telemetry Unit Installed By)</relationshipLabel>
    <relationshipName>Meter_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>