force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Telemetry_Unit_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>AVO_Telemetry_Unit_Serial_Number__c</fullName>
    <label>Telemetry Unit Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>