force-app/main/default/objects/AVO_Meter_Transaction__c/fields/AVO_Type__c.field-meta.xml
<CustomField>
    <fullName>AVO_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agricultural Flow Meter Approval</fullName>
            </value>
            <value>
                <fullName>AG Water Metering Installation</fullName>
            </value>
            <value>
                <fullName>Batch Meter Entry</fullName>
            </value>
            <value>
                <fullName>Meter Allocation</fullName>
            </value>
            <value>
                <fullName>Meter Application</fullName>
            </value>
            <value>
                <fullName>Batch Meter Reading</fullName>
            </value>
            <value>
                <fullName>Meter Maintenance Request</fullName>
            </value>
            <value>
                <fullName>Meter Reading</fullName>
            </value>
            <value>
                <fullName>Meter Update</fullName>
            </value>
            <value>
                <fullName>Meter Entry</fullName>
            </value>
            <value>
                <fullName>Meter Replacement Installation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>